production/vaultwarden/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
        - image: vaultwarden/server:latest
          imagePullPolicy: Always
          name: bitwarden
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: bitwarden-data
              mountPath: /data
          resources:
            limits:
              cpu: 300m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: bitwarden-data
        annotations:
          volume.beta.kubernetes.io/storage-class: "storage-synology-csi-retain" 
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
        storageClassName: storage-synology-csi-retain
